include/dev/ps2.h

// Keys and scancodes are represented internally as 16 bits
// so we can indicate nonexistence (via -1)
//
// A "keycode" consists of the translated key (lower 8 bits)
// combined with an upper byte that reflects status of the 
// different modifier keys
typedef uint16_t nk_keycode_t;
typedef uint16_t nk_scancode_t;
typedef struct nk_mouse_event {
    uint8_t  left;
    uint8_t  middle;
    uint8_t  right;
    uint8_t  res; // counts/mm
    sint32_t dx;
    sint32_t dy;
} nk_mouse_event_t;
int ps2_reset();
int ps2_kbd_reset();
int ps2_mouse_reset();
int ps2_deinit();