rust_bindings/bindings/vc_bindings.rs

extern "C" {
    pub fn ps2_reset() -> core::ffi::c_int;
}
extern "C" {
    pub fn ps2_kbd_reset() -> core::ffi::c_int;
}
extern "C" {
    pub fn ps2_mouse_reset() -> core::ffi::c_int;
}
extern "C" {
    pub fn ps2_deinit() -> core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nk_thread {
    _unused: [u8; 0],
}
pub const nk_vc_type_RAW: nk_vc_type = 0;
pub const nk_vc_type_COOKED: nk_vc_type = 1;
pub const nk_vc_type_RAW_NOQUEUE: nk_vc_type = 2;
pub type nk_vc_type = core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nk_virtual_console {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nk_vc_ops {
    pub raw_noqueue: ::core::option::Option<
        unsafe extern "C" fn(arg1: nk_scancode_t, priv_: *mut core::ffi::c_void),
    >,
}
#[test]
fn bindgen_test_layout_nk_vc_ops() {
    assert_eq!(
        ::core::mem::size_of::<nk_vc_ops>(),
        8usize,
        concat!("Size of: ", stringify!(nk_vc_ops))
    );
    assert_eq!(
        ::core::mem::align_of::<nk_vc_ops>(),
        8usize,
        concat!("Alignment of ", stringify!(nk_vc_ops))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<nk_vc_ops>())).raw_noqueue as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(nk_vc_ops),
            "::",
            stringify!(raw_noqueue)
        )
    );
}
extern "C" {
    pub fn nk_create_vc(
        name: *mut core::ffi::c_char,
        new_vc_type: nk_vc_type,
        attr: u8,
        ops: *mut nk_vc_ops,
        priv_: *mut core::ffi::c_void,
    ) -> *mut nk_virtual_console;
}
extern "C" {
    pub fn nk_destroy_vc(vc: *mut nk_virtual_console) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_bind_vc(thread: *mut nk_thread, cons: *mut nk_virtual_console) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_release_vc(thread: *mut nk_thread) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_get_cur_vc() -> *mut nk_virtual_console;
}
extern "C" {
    pub fn nk_switch_to_vc(vc: *mut nk_virtual_console) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_switch_to_prev_vc() -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_switch_to_next_vc() -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_switch_to_vc_list() -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_putchar(c: u8) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_print(s: *mut core::ffi::c_char) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_puts(s: *mut core::ffi::c_char) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_printf(fmt: *mut core::ffi::c_char, ...) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_log(fmt: *mut core::ffi::c_char, ...) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_printf_specific(
        vc: *mut nk_virtual_console,
        fmt: *mut core::ffi::c_char,
        ...
    ) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_setattr(attr: u8) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_setattr_specific(vc: *mut nk_virtual_console, attr: u8) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_clear(attr: u8) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_clear_specific(vc: *mut nk_virtual_console, attr: u8) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_scrollup() -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_scrollup_specific(vc: *mut nk_virtual_console) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_setpos(x: u8, y: u8) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_getpos(x: *mut u8, y: *mut u8);
}
extern "C" {
    pub fn nk_vc_setpos_specific(vc: *mut nk_virtual_console, x: u8, y: u8) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_display_char(c: u8, attr: u8, x: u8, y: u8) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_display_str(c: *mut u8, n: u8, attr: u8, x: u8, y: u8) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_display_char_specific(
        vc: *mut nk_virtual_console,
        c: u8,
        attr: u8,
        x: u8,
        y: u8,
    ) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_display_str_specific(
        vc: *mut nk_virtual_console,
        c: *mut u8,
        n: u8,
        attr: u8,
        x: u8,
        y: u8,
    ) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_enqueue_scancode(
        vc: *mut nk_virtual_console,
        scan: nk_scancode_t,
    ) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_enqueue_keycode(
        vc: *mut nk_virtual_console,
        key: nk_keycode_t,
    ) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_dequeue_scancode(vc: *mut nk_virtual_console) -> nk_scancode_t;
}
extern "C" {
    pub fn nk_vc_dequeue_keycode(vc: *mut nk_virtual_console) -> nk_keycode_t;
}
extern "C" {
    pub fn nk_vc_get_keycode(wait: core::ffi::c_int) -> nk_keycode_t;
}
extern "C" {
    pub fn nk_vc_get_scancode(wait: core::ffi::c_int) -> nk_scancode_t;
}
extern "C" {
    pub fn nk_vc_getchar_extended(wait: core::ffi::c_int) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_getchar() -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_gets(
        buf: *mut core::ffi::c_char,
        n: core::ffi::c_int,
        display: core::ffi::c_int,
        notifier: ::core::option::Option<
            unsafe extern "C" fn(
                buf: *mut core::ffi::c_char,
                priv_: *mut core::ffi::c_void,
                o: core::ffi::c_int,
            ) -> core::ffi::c_int,
        >,
        priv_: *mut core::ffi::c_void,
    ) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_handle_keyboard(scan: nk_scancode_t) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_handle_mouse(mouse: *mut nk_mouse_event_t) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_init() -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_is_active() -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_start_chardev_console(chardev: *mut core::ffi::c_char) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_stop_chardev_console(chardev: *mut core::ffi::c_char) -> core::ffi::c_int;
}
extern "C" {
    pub fn nk_vc_deinit() -> core::ffi::c_int;
}
